Use StandardCharsets.
Slightly easier code to read and less error prone too.

Change-Id: Idb835f4fabd874bd42dc1e68749e55a0d9ec492a
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>